# projeto-1-bilhao

./: .gitignore  README.md  pyproject.toml
data/: small_test.txt
src/: using_python.py
